# skill2

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  PRIVACY.md  README.md  README.zh.md  TERMS.md  install.sh  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.github/: CODEOWNERS
.github/workflows/: ci.yml
cases/: skill2-audit.yaml  skill2-build.yaml  skill2-package.yaml  skill2-prune.yaml  skill2-publish.yaml  skill2-routing.yaml  skill2-test.yaml  skill2-visualize.yaml
docs/: ARCHITECTURE.md  CURRENT_STATUS.md  DESIGN.md  DOGFOOD.md  ISOLATED_TESTING.md  MVP.md  PRIOR_ART.md  PRODUCT_DIRECTION.md  ROADMAP.md  SKILL_REPO_REFERENCES.md
docs/skill-design/: README.md  skill2-build.md
docs/superpowers/plans/: 2026-07-13-marketplace-first-install.md
docs/superpowers/specs/: 2026-07-13-marketplace-first-install-design.md
skills/skill2-audit/: SKILL.md
skills/skill2-audit/scripts/: .runtime-manifest.json
skills/skill2-build/: SKILL.md
skills/skill2-create/: SKILL.md
skills/skill2-create/scripts/: .runtime-manifest.json
skills/skill2-package/: SKILL.md
skills/skill2-prune/: SKILL.md
skills/skill2-publish/: SKILL.md
skills/skill2-test/: SKILL.md
skills/skill2-visualize/: SKILL.md
src/skill2/: cases.py  cli.py  codex_runner.py  lint.py  models.py  package.py  report.py  scaffold.py  scan.py  suggest.py  tester.py  usage.py
tests/: test_cli.py  test_evaluation.py  test_install.py  test_package.py  test_report.py  test_smoke_install.py  test_suggest.py  test_usage.py
tools/: smoke_install.py
(+14 files in other folders)
