[project]
name = "skill2"
version = "0.0.0"
description = "Skills for your skills: local governance for agent skill libraries."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Yinghao Tang" }]
dependencies = [
  "markdown-it-py>=3.0,<5",
  "PyYAML>=6.0.2,<7",
]

[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["ruff>=0.12,<1"]

[project.scripts]
skill2 = "skill2.cli:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]
